
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ islower (char) ;
 char toupper (char) ;

char *
raisestr(char *str)
{
 char *cp = str;

 while (*str) {
  if (islower(*str))
   *str = toupper(*str);
  str++;
 }
 return (cp);
}
